# cppplayer

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  commands.h  config.cpp  config.h  database.cpp  database.h  init.sql  list.cpp  main.cpp  makefile  manager.cpp  manager.h  mp3.cpp  mp3.h  music.cpp  music.h  musiclist.cpp  musiclist.h  player++.config.example  player.cpp  player.h  song.cpp  song.h  ui.cpp  ui.h  utils.cpp  utils.h
client_console/: main.cpp  makefile
cmake/: FindBoost.cmake
daemon/: config.cpp  config.h  dplayer++  list.cpp  list.h  main.cpp  makefile  mp3.cpp  mp3.h  music.cpp  music.h  player++.config.example  utils.cpp
doc/: USER.txt
include/: cmdutils.h  commands.h  config.h  database.h  manager.h  mp3.h  music.h  musiclist.h  protocol.h  song.h  utils.h
src/: config.cpp  database.cpp  main.cpp  manager.cpp  mp3.cpp  music.cpp  musiclist.cpp  song.cpp  sound.cpp  utils.cpp
